...

    <!-- Settings screen -->
    <string name="settings">设置</string>
    <string name="back">返回</string>

    <!-- Appearance -->
    <string name="appearance">外观</string>
    <string name="font_size">字体大小</string>
    <string name="font_family">字体</string>
    <string name="change">更改</string>
    <string name="select_font_family">选择字体</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
...
    <string name="bootstrap">引导程序</string>

    <!-- Software theme -->
    <string name="software_theme">软件主题</string>

    <!-- Terminal Theme -->
    <string name="theme">终端主题</string>
    <string name="day">日间</string>
    <string name="night">夜间</string>
    <string name="follow_system">跟随系统</string>
    <string name="day_theme">日间主题</string>
    <string name="night_theme">夜间主题</string>

    <!-- Terminal -->
    <string name="terminal">终端</string>
    <string name="shell">Shell</string>
    <string name="action_new_session_failsafe">新建会话（Failsafe）</string>
    <string name="shell_placeholder">/system/bin/sh</string>

    <!-- Session -->
    <string name="sessions">会话</string>
...
