...
    }
}

object BuiltInThemes {
    val draculaPlus =
        TerminalTheme(
            name = "Dracula Plus",
            background = Color(0xFF212121),
            foreground = Color(0xFFF8F8F2),
            cursor = Color(0xFFECEFF4),
            selectionBackground = Color(0xFF44475A),
            ansi =
            listOf(
...
